[package]
name = "limiter"
version = "0.1.0"
edition = "2024"

[lints.rust]
dead_code = "allow"
unused_imports = "allow"

[lints.clippy]
trim_split_whitespace = "allow"

[dependencies]
async-trait = "0.1.89"
cache = { path = "../cache" }
hex = "0.4.3"
reqwest = { version = "0.12.25", features = ["rustls-tls"] }
sha2 = "0.10.9"
throttle = { path = "../throttle" }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
url = "2.5.7"
